# contactfinder

./: .env.example  main.py  pyproject.toml
agents/: __init__.py  gemini.py  gpt.py
domainfinder/: __init__.py  agents.py  finder.py  llm.py  schema.py  utils.py
emailfinder/: __init__.py  finder.py  imports.py  llm.py  schema.py  utils.py
monoliths/: domainfinder.py  finder.py
